2002-07-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* howto-links.h, howtos.ht, howtos.html, tmda-ofmipd.ht,
	tmda-ofmipd.html: New files.
	
2002-07-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Raymond Hosting.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gmane.

2002-06-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Remove faq.ht, faq.html.

2002-06-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add rupture.net.

	* results.ht (Links): Add testimonial from Bettina Balz.

2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht (Links): Warn about the outdated "stable" and/or
	"testing" Debian packages.

2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Update Nightsky link.

2002-05-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Stacey A. Ross.

2002-05-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update link to QAdmin-TMDA.

	* resources.ht (Links): Ditto.

2002-05-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Ed Colmar.

2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (Links): Link to Mate Wierdl's tmda4ezmlm script.
	
2002-05-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (Links): Link to Robin Socha's Using Gnus with TMDA
	to reduce UCE HOWTO.
	
2002-05-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update cygwin entry -- SENDMAIL is not required.

2002-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht: Now only Sendmail installations require
	procmail.
	
	* config-server.ht: DELIVERY replaces LOCAL_DELIVERY_AGENT.

	* faq.ht: Extend FAQ #1 to include CONFIRM_APPEND info.
