@@ -231,9 +231,14 @@ To have TMDA read your configuration each time you send outgoing mail
 and modify your sender address accordingly, you must arrange for your
 MUA to call the included sendmail compatibility wrapper
 <B>(tmda-sendmail)</B>.  tmda-sendmail will use the address set by
-your MUA as the base for your tagged address.  Here is how to
-accomplish this for a few popular MUAs.  Let me know if you are using
-TMDA with a MUA not listed here.
+your MUA as the base for your tagged address.  See below for how to
+accomplish this for a few popular MUAs.
+<br><br>
+
+<strong>NOTE</strong>: 
+If your MUA does not support a sendmail command-line interface
+as is the case with most non-Unix clients, you should use 
+<a href="tmda-ofmipd.html">tmda-ofmipd</a> instead.
 <br><br>
 
 <ul>
