@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Jul 13 14:35:41 2002 -->
+<!-- Sat Jul 13 18:15:38 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -154,9 +154,8 @@ Python</a>: an interpreted, interactive, object-oriented programming language.
 <li>Optional automatic whitelisting of confirmed senders.
 <br><br>
 
-<li>Supports MUA-independent, site-wide installations using relay
-rewriting, including non-unix clients such as Microsoft
-Windows.<br><br>
+<li>Client-side support for both Unix and non-Unix (e.g, Outlook, Eudora, Mozilla)
+mail clients.<br><br>
 
 <li>Package installation available for Linux, and Free/Net/OpenBSD.<br><br>
 
